<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/hours"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="hh"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/mins"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="mm"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/secs"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="ss"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel_short" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/sound"
                android:textSize="16sp" />

            <Button
                android:id="@+id/uri"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/sys_def" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/timesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/controls"
        android:padding="15dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/controls"
        android:gravity="center"

        android:text="@string/empty_list" />
</RelativeLayout>