<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="#151515"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="invisible">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/themeOverlay_timePicker"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/pre_button_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/pre1"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/pre2"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/pre3"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/pre4"
            android:textColor="#FFFFFF"
            android:visibility="gone" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btnadv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/adv"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/button_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="#00000000"
            android:text="@android:string/cancel"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#DDDDDD"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="#00000000"
            android:text="@android:string/ok"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>