<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="?attr/colorSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.yuttadhammo.BodhiTimer.Animation.TimerAnimation
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@null"
        android:gravity="center"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="true" />

    <TextView
        android:id="@+id/text_top"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/sourcesanspro_regular"
        android:fontFeatureSettings="'onum'"
        android:gravity="center"
        android:lineHeight="10sp"
        android:paddingBottom="-10sp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        android:textColor="?attr/colorSurfaceInverse"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/text_preview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lineHeight="10sp"
        tools:targetApi="p"
        android:shadowColor="#B1000000"
        android:shadowDx="1"
        android:shadowDy="0.8"
        android:shadowRadius="7"
        tools:text="30:00" />

    <TextView
        android:id="@+id/text_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/sourcesanspro_regular"
        android:fontFeatureSettings="'onum'"
        android:gravity="center"
        android:paddingTop="-8dp"
        android:singleLine="false"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textColor="?attr/colorSurfaceInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_top"
        android:shadowColor="#B1000000"
        android:shadowDx="0.8"
        android:shadowDy="0.6"
        android:shadowRadius="5"
        tools:text="10:00" />

    <ImageButton
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/set"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/set"
        app:tint="?attr/colorSurfaceInverse" />

    <ImageButton
        android:id="@+id/prefButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/prefs"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/preferences"
        app:tint="?attr/colorSurfaceInverse" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/pause"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pause"
        app:tint="?attr/colorSurfaceInverse" />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/Stop"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/stop"
        app:tint="?attr/colorSurfaceInverse" />
</androidx.constraintlayout.widget.ConstraintLayout>

